2025-12-20T00:58:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20386617365 # 844
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-20
* notice: last 14d: unq all: 12 12
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 426 600
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 427 601
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-19]

2025-12-19T01:01:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20356272706 # 843
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: last 14d: unq all: 11 11
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 425 599
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 426 600
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-18]

2025-12-16T01:02:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252852476 # 840
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 10 10
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 420 594
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 425 599
* notice: prev exec diff / last date diff / accum: unq all: +5 +5 -0 -0 / +5 +5 -0 -0 / 5 5
* notice: removed / changed dates: [] / [2025-12-15]

2025-12-13T00:58:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20184212519 # 837