@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-20T00:58:03Z",
+  "timestamp" : "2025-12-21T01:06:05Z",
   "count_outdated" : 589,
   "uniques_outdated" : 415,
-  "count" : 601,
-  "uniques" : 427,
+  "count" : 603,
+  "uniques" : 429,
   "clones" : [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
