@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 12,
+  "count": 14,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2025-12-19T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-20T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
